testament/tests/shouldfail/tline.nim
discard """
errormsg: "undeclared identifier: 'undeclared'"
line: 9
column: 6
target: c
"""
# test should fail because the line directive is wrong
echo undeclared
